src/test/ui/borrowck/immutable-arg.stderr
error[E0384]: cannot assign twice to immutable variable `_x` (Ast)
  --> $DIR/immutable-arg.rs:14:5
   |
LL | fn foo(_x: u32) {
   |        -- first assignment to `_x`
LL |     _x = 4;
   |     ^^^^^^ cannot assign twice to immutable variable

error[E0384]: cannot assign to immutable argument `_x` (Mir)
  --> $DIR/immutable-arg.rs:14:5
   |
LL | fn foo(_x: u32) {
   |        -- argument not declared as `mut`
LL |     _x = 4;
   |     ^^^^^^ cannot assign to immutable argument

error: aborting due to 2 previous errors

If you want more information on this error, try using "rustc --explain E0384"
